--- a/hideoutcat.csproj
+++ b/hideoutcat.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <PropertyGroup>
-    <SPTPath>E:\Games\spt3.10.2</SPTPath>
+    <SPTPath>E:\Games\SPT_BLEEDINGEDGE</SPTPath>
   </PropertyGroup>
   
   <ItemGroup>
