--- a/hideoutcat.csproj
+++ b/hideoutcat.csproj
@@ -30,6 +30,9 @@
     <Reference Include="IMGUIDebugDraw">
       <HintPath>$(SPTPath)\BepInEx\plugins\tarkin\IMGUIDebugDraw.dll</HintPath>
     </Reference>
+    <Reference Include="AssetBundleLoader">
+      <HintPath>$(SPTPath)\BepInEx\plugins\tarkin\AssetBundleLoader.dll</HintPath>
+    </Reference>
     
     <Reference Include="Assembly-CSharp">
       <HintPath>$(SPTPath)\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
